Prevent image overlap to match thumbnail size
WP Thumbnail size is 198px change lib or work class to match that.

--- a/style.css
+++ b/style.css
@@ -1178,8 +1178,8 @@ main .mainAccordion .ui-accordion-content ul {
 	padding-top:0;
 }
 .smallm .lib {
-	height:200px;
-	width:200px;
+	height:198px;
+	width:198px;
 	background-position: top center;
 }
 .smallm .metro ul .lib a h3 {
